# snakemake-object

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml  test.yml
snakemake_object/: bash.py  julia.py  python.py  r.py
tests/: tests.py
